[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/bg.png" type="Texture" id=1]
[ext_resource path="res://assets/cookiePressed.png" type="Texture" id=2]
[ext_resource path="res://assets/cookie.png" type="Texture" id=3]
[ext_resource path="res://assets/topBar.png" type="Texture" id=4]
[ext_resource path="res://Game.gd" type="Script" id=5]
[ext_resource path="res://font/Burbank Big Condensed Black 700.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://font/fontModel.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/menuBg.png" type="Texture" id=8]
[ext_resource path="res://assets/closeButton.png" type="Texture" id=9]
[ext_resource path="res://assets/chest_pressed.png" type="Texture" id=10]
[ext_resource path="res://Shop.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/market_noPressed.png" type="Texture" id=12]
[ext_resource path="res://Shop2.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/chest_noPressed.png" type="Texture" id=14]
[ext_resource path="res://assets/market_Pressed.png" type="Texture" id=15]
[ext_resource path="res://ShopChest.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/BackgroundBar.png" type="Texture" id=17]
[ext_resource path="res://assets/Bar.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="UI" type="CanvasLayer" parent="."]
layer = -5

[node name="Background" type="Sprite" parent="UI"]
position = Vector2( 0, -0.12247 )
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="TopBar" type="Sprite" parent="UI"]
texture = ExtResource( 4 )
centered = false

[node name="Control" type="Control" parent="."]
margin_left = 0.415314
margin_right = 480.415
margin_bottom = 800.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cookie_button" type="TextureButton" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LabelCookies" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -124.5
margin_top = 25.0
margin_right = 124.5
margin_bottom = 61.0
custom_fonts/font = SubResource( 1 )
text = "(cookies)"
align = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="LabelCookiesPerSecond" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -114.0
margin_top = 67.0
margin_right = 114.0
margin_bottom = 87.0
custom_fonts/font = ExtResource( 7 )
text = "(cookies /s)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopUpShop" type="PopupMenu" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -10.0
margin_right = 20.0
margin_bottom = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/PopUpShop"]
position = Vector2( 0, -4.00388 )
scale = Vector2( 1, 0.948935 )
texture = ExtResource( 8 )

[node name="Shop" parent="Control/PopUpShop" instance=ExtResource( 11 )]
position = Vector2( -169.589, -170.138 )

[node name="CloseButton" type="TextureButton" parent="Control/PopUpShop"]
margin_left = 149.585
margin_top = -222.0
margin_right = 206.585
margin_bottom = -165.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopUpShop2" type="PopupMenu" parent="Control"]
margin_left = 240.0
margin_top = 390.0
margin_right = 260.0
margin_bottom = 410.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/PopUpShop2"]
position = Vector2( 0, -5.65509 )
scale = Vector2( 1, 0.966735 )
texture = ExtResource( 8 )

[node name="Shop2" parent="Control/PopUpShop2" instance=ExtResource( 13 )]
position = Vector2( -169.984, -168.577 )

[node name="CloseButton2" type="TextureButton" parent="Control/PopUpShop2"]
margin_left = 149.585
margin_top = -222.0
margin_right = 206.585
margin_bottom = -165.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupChest" type="PopupMenu" parent="Control"]
margin_left = -24.4153
margin_top = -18.0
margin_right = -4.41531
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/PopupChest"]

[node name="ShopChest" parent="Control/PopupChest" instance=ExtResource( 16 )]
position = Vector2( 11, 133 )

[node name="CloseButton3" type="TextureButton" parent="Control/PopupChest"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 400.0
margin_top = 168.0
margin_right = 457.0
margin_bottom = 225.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 240, 733.158 )
scale = Vector2( 1, 1.20288 )
texture = ExtResource( 4 )

[node name="ShopButton" type="TextureButton" parent="."]
margin_left = 12.0
margin_top = 666.0
margin_right = 142.0
margin_bottom = 796.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopButton2" type="TextureButton" parent="."]
margin_left = 338.0
margin_top = 666.0
margin_right = 468.0
margin_bottom = 796.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChestButton" type="TextureButton" parent="."]
margin_left = 175.0
margin_top = 670.0
margin_right = 305.0
margin_bottom = 800.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Control2" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="Control2"]
margin_left = 52.0
margin_top = 156.0
margin_right = 445.0
margin_bottom = 207.0
rounded = true
texture_under = ExtResource( 17 )
texture_progress = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer2" type="Timer" parent="Control2"]
wait_time = 0.01
autostart = true

[connection signal="pressed" from="Control/Cookie_button" to="." method="_on_Cookie_button_pressed"]
[connection signal="pressed" from="Control/PopUpShop/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="Control/PopUpShop2/CloseButton2" to="." method="_on_CloseButton2_pressed"]
[connection signal="pressed" from="Control/PopupChest/CloseButton3" to="." method="_on_CloseButton3_pressed"]
[connection signal="pressed" from="ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="pressed" from="ShopButton2" to="." method="_on_ShopButton2_pressed"]
[connection signal="pressed" from="ChestButton" to="." method="_on_ChestButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="value_changed" from="Control2/TextureProgress" to="." method="_on_TextureProgress_value_changed"]
[connection signal="timeout" from="Control2/Timer2" to="." method="_on_Timer2_timeout"]
